# modern-cpp-project-boilerplate

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/classes/: Class.cpp  Class.h
